[package]
name = "coindesk"
version = "0.1.0"
authors = ["Grant Handy <grantshandy@gmail.com>"]
edition = "2018"
description = "A Bitcoin price index API powered by coindesk.com"
keywords = ["price", "index", "bitcoin", "crypto", "cryptocurrency"]
documentation = "https://docs.rs/coindesk"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
surf = "2.2.0"
chrono = "0.4.19"

[dev-dependencies]
tokio = { version = "1.5.0", features = ["full"] }